<resources>
    <string name="app_name">ApoLife</string>
    <string name="belanja_obatmu_tanpa_antri">Belanja obatmu tanpa antri</string>
    <string name="apolife">ApoLife</string>
    <string name="mulai">Mulai</string>
    <string name="register">Register</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beranda">Beranda</string>
    <string name="profil">Profil</string>
    <string name="chat">Chat</string>
    <string name="enzo">Enzo</string>
    <string name="_168cm_69kg">168cm, 69kg</string>
    <string name="riwayat_ntransaksi">Riwayat\nTransaksi</string>
    <string name="berita">Berita</string>
    <string name="lainnya">Lainnya</string>
    <string name="obat">Obat</string>
    <string name="dummy">dummy</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="tinggi">Tinggi</string>
    <string name="berat">Berat</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kode_bpom">Kode BPOM</string>
    <string name="nama_obat">Nama Obat</string>
    <string name="bentuk_obat">Bentuk Obat</string>
    <string name="kategori">Kategori</string>
    <string name="dikonsumsi_oleh">Dikonsumsi oleh</string>
    <string name="golongan">Golongan</string>
    <string name="dosis">Dosis</string>
    <string name="harga_obat">Harga Obat</string>
    <string name="deskripsi_obat">Deskripsi Obat</string>
    <string name="manfaat_obat">Manfaat Obat</string>
    <string name="tanggal">tanggal</string>
</resources>