<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profil2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="48dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profil"
        android:textAlignment="center"
        android:textSize="36sp"
        android:fontFamily="@font/futura_heavy_font"
        android:textColor="@color/design_default_color_primary"
        />
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:id="@+id/ivPhoto"
        android:scaleType="fitCenter"
        />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvJenis"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:lines="3"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvTinggi"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berat"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />

        <TextView
            android:id="@+id/tvBerat"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:text="@string/dummy"
            android:textColor="@color/design_default_color_primary" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_telepon"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/futura_heavy_font"
            />
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/dummy"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/futura_heavy_font"
            android:textColor="@color/design_default_color_primary"
            android:id="@+id/tvNomor"
            />
    </RelativeLayout>

</LinearLayout>