<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.register"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/register"
        android:layout_marginVertical="16dp"
        android:letterSpacing="0.1"
        android:textColor="@color/design_default_color_primary"
        android:fontFamily="@font/futura_bold_font"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_outline_person_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:hint="@string/nama_lengkap">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namaInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_outline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noTelepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:startIconDrawable="@drawable/ic_outline_local_phone_24"
        android:hint="@string/nomor_telepon">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noTeleponInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:id="@+id/btnRegister"
        android:text="@string/daftar"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:drawableEnd="@drawable/ic_baseline_trending_flat_24"
        android:drawableTint="@color/white"
        />




</LinearLayout>