<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splashScreen"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:layout_marginVertical="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_bold_font"
        android:textSize="48sp"
        android:text="@string/apolife"
        android:layout_marginVertical="16dp"
        android:letterSpacing="0.2"
        android:textColor="@color/design_default_color_primary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura_medium_bt"
        android:text="@string/belanja_obatmu_tanpa_antri"
        android:textSize="24sp"
        />
    <Button
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/futura_bold_font"
        android:letterSpacing="0.1"
        android:text="@string/mulai"
        android:id="@+id/btnMulai"
        android:textSize="18sp"
        />
</LinearLayout>