<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="@string/login"
        android:layout_marginVertical="16dp"
        android:letterSpacing="0.1"
        android:textColor="@color/design_default_color_primary"
        android:fontFamily="@font/futura_bold_font"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_outline_email_24"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailInput"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:passwordToggleEnabled="true"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        android:drawableEnd="@drawable/ic_baseline_trending_flat_24"
        android:drawableTint="@color/white"
        />
    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:id="@+id/btnRegister"
        android:text="@string/register"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/design_default_color_primary"
        />
</LinearLayout>