<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.bacaObat"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:gravity="center_horizontal"
        android:paddingVertical="32dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/ivObat"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_bpom"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvBpom"
                android:fontFamily="@font/futura_heavy_font"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_obat"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/futura_heavy_font"
                android:text="@string/nama_lengkap" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bentuk_obat"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvBentuk"
                android:fontFamily="@font/futura_heavy_font"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvKategori"
                android:fontFamily="@font/futura_heavy_font"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dikonsumsi_oleh"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvKonsumsi"
                android:fontFamily="@font/futura_heavy_font"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/golongan"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvGolongan"
                android:fontFamily="@font/futura_heavy_font"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosis"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:id="@+id/tvDosis"
                android:fontFamily="@font/futura_heavy_font"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_obat"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/futura_heavy_font"
                android:textColor="@color/design_default_color_primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/futura_heavy_font"
                android:id="@+id/tvHarga"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_obat"
            android:fontFamily="@font/futura_heavy_font"
            android:textSize="16sp"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginVertical="6dp"

            />
        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDesc"
            android:fontFamily="@font/futura_heavy_font"
            android:layout_marginVertical="6dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manfaat_obat"
            android:fontFamily="@font/futura_heavy_font"
            android:textColor="@color/design_default_color_primary"
            android:layout_marginVertical="6dp"
            />
        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvManfaat"
            android:fontFamily="@font/futura_heavy_font"

            />

    </LinearLayout>

</ScrollView>