<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.beranda"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_user"
            android:gravity="center_vertical"
            android:padding="16dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                android:id="@+id/ivUserPhoto"
                android:layout_centerVertical="true"
                />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_toRightOf="@id/ivUserPhoto"
                android:fontFamily="@font/futura_heavy_font"
                android:text="@string/enzo"
                android:textColor="@color/design_default_color_primary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvUserWH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ivUserPhoto"
                android:layout_marginHorizontal="16dp"
                android:layout_toRightOf="@id/ivUserPhoto"
                android:fontFamily="@font/futura_heavy_font"
                android:text="@string/_168cm_69kg"
                android:textColor="@color/design_default_color_primary" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_fitur"
            android:gravity="center"
            android:layout_marginVertical="16dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"
                    android:scaleType="fitCenter"
                    android:id="@+id/btnChat"
                    style="@style/Widget.AppCompat.Button.Borderless"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chat\nDengan Dokter"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_primary"
                    android:fontFamily="@font/futura_heavy_font"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/drawkit_vector_illustration_medical_09"
                    android:scaleType="fitCenter"
                    android:id="@+id/btnToko"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Toko\nKesehatan"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_primary"
                    android:fontFamily="@font/futura_heavy_font"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                >
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/drawkit_vector_illustration_medical_13"
                    android:scaleType="fitCenter"
                    android:id="@+id/btnRiwayat"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/riwayat_ntransaksi"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_primary"
                    android:fontFamily="@font/futura_heavy_font"
                    />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_berita"
            android:layout_margin="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvBerita"
                android:text="@string/berita"
                android:fontFamily="@font/futura_heavy_font"
                android:textSize="24dp"
                android:textColor="@color/design_default_color_primary"
                android:layout_alignParentLeft="true"
                />

            <Button
                android:id="@+id/btnLainBerita"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/lainnya"
                android:textColor="@color/design_default_color_primary"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBerita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLainBerita" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_obat"
            android:layout_margin="16dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvObat"
                android:text="@string/obat"
                android:fontFamily="@font/futura_heavy_font"
                android:textSize="24dp"
                android:textColor="@color/design_default_color_primary"
                android:layout_alignParentLeft="true"
                />

            <Button
                android:id="@+id/btnLainObat"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/lainnya"
                android:textColor="@color/design_default_color_primary"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvObat"
                android:layout_below="@id/btnLainObat"
                />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>